# tfg_docker_utility_setup

./: .gitignore  README.md  down.sh  start.sh  up.sh
event_manager/: db.sqlite3  pyproject.toml
jitsi/: .env  (+3 more)
jitsi_calendar/: db.sqlite3  manage.py  pyproject.toml  sources.txt
jitsi_calendar/calendar_users/: apps.py  urls.py
jitsi_calendar/calendar_users/templates/accounts/: login.html
jitsi_calendar/calendar_users/templates/includes/: navigation.html
jitsi_calendar/calendar_utility/: apps.py  urls.py
jitsi_calendar/eventlist/: admin.py  apps.py  forms.py  models.py  views.py
jitsi_calendar/eventlist/migrations/: 0001_initial.py  0002_auto_20220426_1613.py
jitsi_calendar/eventlist/templates/accounts/: login.html
jitsi_calendar/eventlist/templates/home/: 403.html  event_list.html  index.html  list_event_lists.html  profile.html
jitsi_calendar/eventlist/templates/includes/: navigation.html
jitsi_calendar/eventlist/templates/layouts/: base.html
jitsi_calendar/jitsi_calendar/: settings.py  urls.py  wsgi.py
jitsi_calendar/meeting_list/: admin.py  apps.py  models.py  views.py
jitsi_calendar/meeting_list/migrations/: 0001_initial.py
jitsi_calendar/meeting_list/templates/layouts/: base-fullscreen.html
jitsi_calendar/swingtime/: admin.py  apps.py  forms.py  urls.py  utils.py  views.py
jitsi_calendar/swingtime/migrations/: 0002_auto_20220315_1744.py
jitsi_calendar/swingtime/templates/: intro.html  karate.html
jitsi_calendar/swingtime/templates/home/: profile.html
jitsi_calendar/swingtime/templates/includes/: navigation.html  sidebar.html
(+258 files in other folders)
