[tool.poetry]
name = "tfg_docker_utility_setup"
version = "1.0.0"
description = ""
authors = ["Anibal Vaquero <AnibalVaquero@usal.es>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.*,<4"
django-admin = "*"
django-semantic-admin = "*"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
